--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <div class="container">
-    <h1><img src="./Icons/unknown.jfif" alt="Weather App" width="50" height="30">Weather App</h1>
+    <h1><img src="./unknown.jfif" alt="Weather App" width="50" height="30">Weather App</h1>
     <div id="weather-info">
       <h2>Current Weather</h2>
       <p>City:<span id="city"></span></p>
